cleaned up minecraft class structure/exception handling

--- a/src/server_controller/testserver/server.properties
+++ b/src/server_controller/testserver/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Mon Feb 03 23:20:13 EST 2025
+#Tue Feb 04 23:37:40 EST 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -9,8 +9,8 @@ bug-report-link=
 difficulty=easy
 enable-command-block=false
 enable-jmx-monitoring=false
-enable-query=false
-enable-rcon=false
+enable-query=true
+enable-rcon=true
 enable-status=true
 enforce-secure-profile=true
 enforce-whitelist=false
@@ -42,7 +42,7 @@ prevent-proxy-connections=false
 pvp=true
 query.port=25565
 rate-limit=0
-rcon.password=
+rcon.password=password
 rcon.port=25575
 region-file-compression=deflate
 require-resource-pack=false
