--- a/src/server_controller/testserver/server.properties
+++ b/src/server_controller/testserver/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Feb 07 23:38:35 EST 2025
+#Sun Feb 09 23:28:36 EST 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -42,7 +42,7 @@ prevent-proxy-connections=false
 pvp=true
 query.port=25565
 rate-limit=0
-rcon.password=password
+rcon.password=something-complicated
 rcon.port=25575
 region-file-compression=deflate
 require-resource-pack=false
