--- a/src/server_controller/testserver/server.properties
+++ b/src/server_controller/testserver/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Feb 09 23:28:36 EST 2025
+#Mon Feb 10 23:49:19 EST 2025
 accepts-transfers=false
 allow-flight=false
 allow-nether=true
@@ -10,7 +10,7 @@ difficulty=easy
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=true
-enable-rcon=true
+enable-rcon=false
 enable-status=true
 enforce-secure-profile=true
 enforce-whitelist=false
