--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 .env
 .venv
 ts-oauth
-src/server_controller/testserver/*
-!src/server_controller/testserver/server.properties
-!src/server_controller/testserver/settings.sh
-!src/server_controller/testserver/start_script.sh
+server/*
+!server/.gitkeep
