--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
     build:
       context: ${PWD}
       dockerfile: src/server_controller/Dockerfile
+      args:
+        JAVA_VERSION: ${JAVA_VERSION}
     env_file: .env
     volumes:
       - ${PWD}/server:/app/server
