added default file automation

--- a/src/discord_bot/Dockerfile
+++ b/src/discord_bot/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY src/discord_bot/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY src/discord_bot /app
-COPY settings /app/servermanager/settings
+COPY src/discord_bot /app/discord_bot
+COPY src/settings /app/discord_bot/settings
 
-CMD ["python", "bot.py"]
+CMD ["python", "discord_bot/bot.py"]
