--- a/src/server_controller/Dockerfile
+++ b/src/server_controller/Dockerfile
@@ -12,8 +12,8 @@ ENV PATH="${JAVA_HOME}/bin:${PATH}"
 COPY src/server_controller/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY src/server_controller /app/server_controller
-COPY settings /app/server_controller/servermanager/settings
-COPY server /app/server_controller/servermanager/server
+COPY src/settings /app/server_controller/settings
+COPY server /app/server
 
 
 CMD ["python", "server_controller/main.py"]
